--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -112,6 +112,10 @@ body.touch .dropdown.show-dropdown .dropdown__list {
     top: rem(3);
 
     right: 0;
+
+    @media (max-width: 767.98px) {
+      top: rem(15);
+    }
   }
 }
 
