--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -60,16 +60,19 @@
 
 .header {
   padding: rem(40) 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+
+  background-color: var(--color-light);
 
   @media (max-width: 991.98px) {
     padding: rem(25) 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: rem(15) 0;
   }
   @media (max-width: 767.98px) {
-    padding: rem(12) 0;
+    padding: rem(10) 0;
   }
 
   &__container,
