--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@
 
 body {
   font-family: var(--font-family);
+  color: var(--color-primary);
 
   &.is-fixed {
     overflow: hidden;
@@ -47,6 +48,8 @@ body {
 /*===============SECTIONS===============*/
 
 @import 'hero.scss';
+
+@import 'offer.scss';
 
 /*===============Header===============*/
 @import 'header.scss';
