--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -66,6 +66,7 @@
   left: 0;
   width: 100%;
   padding: rem(15) 0;
+  z-index: 55;
 
   @media (max-width: 767.98px) {
     padding: rem(10) 0;
@@ -96,7 +97,7 @@
       width: 100%;
       top: 0;
       left: 0;
-      background-color: var(--bg-color-blue);
+      background-color: var(--bg-color-blue-light);
       z-index: 2;
     }
   }
