--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -14,15 +14,11 @@
   }
 
   @media (max-width: 767.98px) {
-    padding: rem(100) 0 rem(130);
+    padding: rem(100) 0 rem(150);
     margin-top: rem(55);
 
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
       url('@img/hero/hero-bg.png') center no-repeat;
-  }
-
-  @media (max-width: 479.98px) {
-    padding: rem(50) 0 rem(80);
   }
 
   &__content {
@@ -37,10 +33,10 @@
     line-height: lh(73, 56);
 
     &:not(:last-child) {
-      margin-bottom: rem(24);
+      margin-bottom: em(24, 56);
 
       @media (max-width: 767.98px) {
-        margin-bottom: rem(10);
+        margin-bottom: em(10, 42);
       }
     }
 
@@ -63,14 +59,18 @@
     color: var(--color-light);
     line-height: lh(25, 16);
 
-    max-width: rem(867);
+    max-width: em(867, 16);
     margin: 0 auto;
 
+    & > p:not(:last-child) {
+      margin-bottom: em(15, 16);
+    }
+
     &:not(:last-child) {
-      margin-bottom: rem(54);
+      margin-bottom: em(54, 16);
 
       @media (max-width: 767.98px) {
-        margin-bottom: rem(20);
+        margin-bottom: em(20, 16);
       }
     }
 
