--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -14,6 +14,9 @@
   --bg-color-blue: #d3e5fe;
   --bg-color-blue-light: #ecf4ff;
 
+  --border-color-gray: #c8c8c8;
+  --border-color-gray-light: #e9e8e8;
+
   // FONTS
   --font-family: 'DM Sans', sans-serif;
 
