--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -57,5 +57,7 @@ body {
 
 @import './parts/courses.scss';
 
+@import './parts/mentor.scss';
+
 /*===============Footer===============*/
 @import './parts/footer.scss';
