--- a/src/scss/parts/_future.scss
+++ b/src/scss/parts/_future.scss
@@ -85,6 +85,14 @@
     }
   }
 
+  &__video {
+    display: none;
+
+    &.show-video {
+      display: inline-block;
+    }
+  }
+
   .video-future__img,
   .video-future__video {
     position: absolute;
@@ -93,14 +101,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
-
-  &__video {
-    display: none;
-
-    &.show-video {
-      display: block;
-    }
   }
 
   &__img.hide {
