--- a/src/scss/dev/vars.scss
+++ b/src/scss/dev/vars.scss
@@ -10,6 +10,7 @@
   --color-accent-active: #044197;
 
   --color-light: #fff;
+  --color-dark: #000;
 
   --bg-color-blue: #d3e5fe;
   --bg-color-blue-light: #ecf4ff;
