--- a/src/scss/parts/_event.scss
+++ b/src/scss/parts/_event.scss
@@ -1,5 +1,5 @@
-.mentor {
-  padding: rem(128) 0 rem(64);
+.event {
+  padding: rem(64) 0 rem(128);
 
   @media (max-width: 991.98px) {
     padding: rem(64) 0;
@@ -10,7 +10,7 @@
   }
 
   &__block {
-    max-width: rem(551);
+    max-width: rem(421);
     margin: 0 auto;
 
     &:not(:last-child) {
@@ -24,20 +24,27 @@
   &__grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(rem(260), 1fr));
-    gap: rem(24);
+    gap: rem(25);
   }
 }
 
-.item-mentor {
-  box-shadow: 0px rem(11) rem(55) rgba(0, 0, 0, 0.08);
+.item-event {
+  box-shadow: 0px rem(12) rem(45) rgba(0, 0, 0, 0.08);
   border-radius: rem(6);
-  overflow: hidden;
   background-color: var(--color-light);
+  overflow: hidden;
+  position: relative;
 
+  &__date {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+  }
   &__image {
     display: block;
     position: relative;
-    padding-bottom: 92%;
+    padding-bottom: 65%;
     overflow: hidden;
 
     @media (any-hover: hover) {
@@ -62,15 +69,15 @@
     }
   }
   &__content {
-    padding: rem(16) rem(32) rem(36);
+    padding: rem(24) rem(24) rem(32);
 
     @media (max-width: 991.98px) {
-      padding: rem(10) rem(16) rem(18);
+      padding: rem(16);
     }
   }
   &__title {
     &:not(:last-child) {
-      margin-bottom: rem(8);
+      margin-bottom: rem(20);
     }
   }
   &__link {
@@ -86,35 +93,40 @@
       color: var(--color-accent-active);
     }
   }
-  &__sub {
-    display: inline-block;
-
-    &:not(:last-child) {
-      margin-bottom: rem(24);
-    }
-  }
   &__bottom {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: rem(8);
+    flex-wrap: wrap;
   }
-}
-.activity-item-mentor {
-  display: flex;
-  align-items: center;
-  gap: rem(16);
-
   &__col {
     display: flex;
     align-items: center;
-    gap: rem(6);
+    gap: rem(8);
   }
-  &__image {
+  &__icon {
     svg {
-      width: rem(15);
-      height: rem(15);
-      fill: var(--color-accent);
+      width: rem(16);
+      height: rem(16);
+      fill: var(--color-dark);
     }
+  }
+}
+.date-item-event {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--color-light);
+  background-color: var(--color-accent);
+  padding: rem(8) rem(12);
+
+  &__num,
+  &__month {
+    font-weight: var(--fw-medium);
+  }
+
+  &__month {
+    text-transform: uppercase;
   }
 }
