--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,5 +59,7 @@ body {
 
 @import './parts/mentor.scss';
 
+@import './parts/event.scss';
+
 /*===============Footer===============*/
 @import './parts/footer.scss';
