--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -61,5 +61,7 @@ body {
 
 @import './parts/event.scss';
 
+@import './parts/result.scss';
+
 /*===============Footer===============*/
 @import './parts/footer.scss';
