--- a/src/scss/dev/vars.scss
+++ b/src/scss/dev/vars.scss
@@ -17,6 +17,7 @@
 
   --border-color-gray: #c8c8c8;
   --border-color-gray-light: #e9e8e8;
+  --border-color-gray-dark: #bfbfbf;
 
   // FONTS
   --font-family: 'DM Sans', sans-serif;
