--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,5 +63,7 @@ body {
 
 @import './parts/result.scss';
 
+@import './parts/blog.scss';
+
 /*===============Footer===============*/
 @import './parts/footer.scss';
