--- a/src/scss/parts/_courses.scss
+++ b/src/scss/parts/_courses.scss
@@ -38,9 +38,7 @@
     }
   }
   &__footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
   }
 }
 
