--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,5 +67,7 @@ body {
 
 @import './parts/reviews.scss';
 
+@import './parts/students.scss';
+
 /*===============Footer===============*/
 @import './parts/footer.scss';
