--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,10 @@
 
 /*===============GLOBAL STYLES===============*/
 
+// html {
+//   scroll-behavior: smooth;
+// }
+
 body {
   font-family: var(--font-family);
   color: var(--color-primary);
