--- a/src/scss/parts/_future.scss
+++ b/src/scss/parts/_future.scss
@@ -71,6 +71,7 @@
     padding-bottom: 75%;
     border-radius: rem(4);
     overflow: hidden;
+    width: 100%;
 
     @media (max-width: 767.98px) {
       padding-bottom: 55%;
