--- a/src/scss/parts/_future.scss
+++ b/src/scss/parts/_future.scss
@@ -8,6 +8,7 @@
   &__container {
     display: flex;
     align-items: start;
+    // align-items: center;
 
     @media (max-width: 767.98px) {
       flex-wrap: wrap;
